--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "typings": "dist/index.d.ts",
     "jsnext:main": "dist.es2015/index.js",
     "module": "dist.es2015/index.js",
+    "publishConfig": {
+        "access": "public"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/chan-hive/core.git"
