--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,7 +9,15 @@
     ],
     "ci": true,
     "plugins": [
-        "@semantic-release/commit-analyzer",
+        [
+            "@semantic-release/commit-analyzer",
+            {
+                "releaseRules": [
+                    { "type": "refactor", "release": "patch" },
+                    { "type": "style", "release": "patch" }
+                ]
+            }
+        ],
         "@semantic-release/release-notes-generator",
         "@semantic-release/npm",
         "@semantic-release/github",
